Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -376,7 +376,8 @@
    },
    "outputs": [],
    "source": [
-    "for 'City' in cities\n",
+    "for 'City' in cities:\n",
+    "    city_count += 1\n",
     "city_count = \n",
     "city_count # 12"
    ]
