--- a/index.ipynb
+++ b/index.ipynb
@@ -376,9 +376,10 @@
    },
    "outputs": [],
    "source": [
+    "city_count = 0\n",
     "for 'City' in cities:\n",
     "    city_count += 1\n",
-    "city_count = \n",
+    "city_count\n",
     "city_count # 12"
    ]
   },
