--- a/index.ipynb
+++ b/index.ipynb
@@ -370,25 +370,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "can't assign to literal (<ipython-input-11-d81836dec18e>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-d81836dec18e>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    for 'City' in cities:\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to literal\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "city_count == 0\n",
-    "for 'City' in cities:\n",
-    "    city_count += 1\n",
-    "city_count\n",
+    "city_count = None\n",
     "city_count # 12"
    ]
   },
