Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -376,7 +376,10 @@
    },
    "outputs": [],
    "source": [
-    "city_count = None\n",
+    "city_count == 0\n",
+    "for 'City' in cities.values:\n",
+    "    city_count += 1\n",
+    "city_count\n",
     "city_count # 12"
    ]
   },
