--- a/index.ipynb
+++ b/index.ipynb
@@ -377,7 +377,7 @@
    "outputs": [],
    "source": [
     "city_count == 0\n",
-    "for 'City' in cities.values:\n",
+    "for x in 'City' in cities.values:\n",
     "    city_count += 1\n",
     "city_count\n",
     "city_count # 12"
