Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -370,14 +370,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "can't assign to literal (<ipython-input-13-fc7b898844ca>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-fc7b898844ca>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    for 'City' in x in cities.values():\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to literal\n"
+     ]
+    }
+   ],
    "source": [
     "city_count == 0\n",
-    "for 'City' in x in cities:\n",
+    "for 'City' in x in cities.values():\n",
     "    city_count += 1\n",
     "city_count\n",
     "city_count # 12"
