Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -385,10 +385,7 @@
     }
    ],
    "source": [
-    "city_count == 0\n",
-    "for 'City' in x.values() in cities:\n",
-    "    city_count += 1\n",
-    "city_count\n",
+    "city_count = \n",
     "city_count # 12"
    ]
   },
